// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentViewer stage 1 metadata bar > matches compact metadata bar snapshot 1`] = `
<div
  class="flex items-center gap-3 flex-wrap text-xs text-text-muted mb-3"
  data-testid="media-metadata-bar"
>
  <span
    class="inline-flex items-center px-1.5 py-0.5 rounded bg-surface2 text-text capitalize font-medium"
  >
    pdf
  </span>
  <span
    class="flex items-center gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-file-text w-3 h-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
      />
      <path
        d="M14 2v5a1 1 0 0 0 1 1h5"
      />
      <path
        d="M10 9H8"
      />
      <path
        d="M16 13H8"
      />
      <path
        d="M16 17H8"
      />
    </svg>
    1
     
    words
  </span>
  <span
    class="inline-flex items-center gap-1 rounded bg-surface2 px-1.5 py-0.5"
    data-testid="media-reading-time"
  >
    1 min read
  </span>
</div>
`;

exports[`ContentViewer stage 1 metadata bar > matches expanded metadata bar snapshot 1`] = `
<div
  class="flex items-center gap-3 flex-wrap text-xs text-text-muted mb-3"
  data-testid="media-metadata-bar"
>
  <span
    class="inline-flex items-center px-1.5 py-0.5 rounded bg-surface2 text-text capitalize font-medium"
  >
    pdf
  </span>
  <span
    class="truncate max-w-[200px]"
    title="archive.org"
  >
    archive.org
  </span>
  <span
    class="flex items-center gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock w-3 h-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 6v6l4 2"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    06:00
  </span>
  <span
    class="inline-flex items-center gap-1 rounded bg-surface2 px-1.5 py-0.5"
    data-testid="media-ingested-date"
    title="2026-02-15T12:00:00.000Z"
  >
    Ingested
     
    3d ago
  </span>
  <span
    class="inline-flex items-center gap-1 rounded bg-surface2 px-1.5 py-0.5"
    data-testid="media-last-modified-date"
    title="2026-02-17T09:00:00.000Z"
  >
    Updated
     
    1d ago
  </span>
  <span
    class="flex items-center gap-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-file-text w-3 h-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
      />
      <path
        d="M14 2v5a1 1 0 0 0 1 1h5"
      />
      <path
        d="M10 9H8"
      />
      <path
        d="M16 13H8"
      />
      <path
        d="M16 17H8"
      />
    </svg>
    420
     
    words
  </span>
  <span
    class="inline-flex items-center gap-1 rounded bg-surface2 px-1.5 py-0.5"
    data-testid="media-reading-time"
  >
    3 min read
  </span>
</div>
`;
